Revert "feat: Java 升级"
This reverts commit 10a29dc30ef97c88f45e04ab63a2ccda5285708e.