@@ -51,7 +51,7 @@ public class DtsTopicService {
 		if (topics.size() == 0) {
 			return queryList(offset, limit, "add_time", "desc");
 		}
-		DtsTopic topic = topics.getFirst();
+		DtsTopic topic = topics.get(0);
 
 		example = new DtsTopicExample();
 		example.or().andIdNotEqualTo(topic.getId()).andDeletedEqualTo(false);
