@@ -97,7 +97,7 @@ public class WxAuthController {
 			logger.error("账户登录 用户尚未存在,用户名:{}", username);
 			return ResponseUtil.badArgumentValue();
 		} else {
-			user = userList.getFirst();
+			user = userList.get(0);
 		}
 
 		BCryptPasswordEncoder encoder = new BCryptPasswordEncoder();
@@ -343,7 +343,7 @@ public class WxAuthController {
 			return ResponseUtil.serious();
 		}
 		if (userList.size() == 1) {
-			DtsUser checkUser = userList.getFirst();
+			DtsUser checkUser = userList.get(0);
 			String checkUsername = checkUser.getUsername();
 			String checkPassword = checkUser.getPassword();
 			if (!checkUsername.equals(openId) || !checkPassword.equals(openId)) {
@@ -441,7 +441,7 @@ public class WxAuthController {
 			logger.error("账号密码重置出错,账户不存在,查询手机号:{},{}", mobile, WxResponseCode.AUTH_MOBILE_UNREGISTERED.desc());
 			return WxResponseUtil.fail(WxResponseCode.AUTH_MOBILE_UNREGISTERED);
 		} else {
-			user = userList.getFirst();
+			user = userList.get(0);
 		}
 
 		BCryptPasswordEncoder encoder = new BCryptPasswordEncoder();
